--- a/2025/2025-12-07-wir.md
+++ b/2025/2025-12-07-wir.md
@@ -1,22 +1,28 @@
-# TKTK
-## TKTK
+# The streamer swallows Hollywood
+## Why Netflix’s $83 billion acquisition of Warner Brothers changes everything
 
 ![Batman on the movie, carrying a roller bag down the street](https://w3w.news/img/batman-emmanuel-denier-3000.jpg)  
 *Photo by Emmanuel Denier via [Unsplash](https://unsplash.com/@sounce_cosplay)*
 
-**Lead item goes here.** Riff on Netflix-Warner Brothers. <!-- Should run ~300 words.  -->
+**For consumers, the best media merger is generally none at all.** Such deals always seem to lead to higher subscription fees, less diversity of ideas, and myriad other unpleasantness.
 
-- Google News clips:  https://news.google.com/search?q=wbd&hl=en-US&gl=US&ceid=US%3Aen
+That said, [Netflix's acquisition of Warner Brothers](https://finance.yahoo.com/news/lowest-probability-outcome-netflixs-72-billion-deal-for-warner-bros-discovery-stuns-wall-street-153038741.html) for $83 billion is probably about as good as it gets for the rest of us, grading on a very steep curve. The reason why is perhaps best expressed using a metaphor borrowed from a different media giant.
+
+Realistically, at some point long ago in the bidding process that led to [Friday's deal announcement](https://about.netflix.com/en/news/netflix-to-acquire-warner-bros), "no merger" ceased to be a viable option. Once Warner Brothers was in play as a possible acquisition target, with an army of bankers and lawyers richly incentivized to close a sale, the company was (and is) never really going to remain independent again.
+
+To claim otherwise at this point is akin to believing Bambi lives in the forest.
+
+Some details to watch from here:
+
+- TK <!-- Item on Paramount/WH relationships -->
+
+- TK <!-- Item on CNN -->
+
+- TK <!-- How is that spinoff going to fare? -->
 
 - /Film on how the deal could affect the DCU: https://www.slashfilm.com/2044070/netflix-warner-bros-acquisition-dc-universe-future/
 
-<!-- Draft post by ChatGPT... -->
-
-Here’s a tight, ~300-word, newsletter-ready opening take—snappy, contextual, and aimed at an emerging-tech readership:
-
----
-
-## 🎬 Netflix + Warner Bros.: A Deal That Redraws the Streaming Map
+<!-- Draft post by ChatGPT...
 
 It finally happened: Netflix, the onetime industry disruptor, is now buying one of Hollywood’s storied incumbents. The newly announced acquisition of Warner Bros. isn’t just another mega-merger — it’s a line of demarcation in the evolution of entertainment, technology, and distribution. And it says as much about where streaming *isn’t* working as where it’s headed next.
 
@@ -28,19 +34,9 @@ Regulators are unlikely to let this slide without a prolonged fight. The deal co
 
 But one thing is clear: This merger signals the end of the “streaming wars” as we’ve known them. The next era won’t be about who has the best app — it will be about who controls the IP universe that shapes global culture. And with this deal, Netflix just grabbed a very large share of that future.
 
----
+<!-- Draft post by Google Gemini...
 
-Want a punchier, 150-word version or a bolder, more opinionated version for social clips?
-
-<!-- Draft post by Google Gemini... -->
-
-That is a massive story, and it requires a strong opening statement. The confirmation of the **$82.7 billion Netflix-Warner Bros. Discovery (WBD) deal** marks the end of the streaming wars’ “golden age” and the beginning of the consolidation era.
-
-Here is a snappy, 300-word draft for your newsletter lead, focusing on the essential elements your readers need to know.
-
-***
-
-## 💥 The Streamer Swallows Hollywood: Why Netflix’s $83 Billion Warner Bros. Deal Changes Everything
+The **$82.7 billion Netflix-Warner Bros. Discovery (WBD) deal** marks the end of the streaming wars’ “golden age” and the beginning of the consolidation era.
 
 The streaming universe just got a whole lot smaller. On Friday, **Netflix** formally announced its acquisition of **Warner Bros. Discovery's (WBD) studio and streaming business** for a staggering $82.7 billion, confirming the media merger of the decade. This isn't just a corporate transaction; it’s a tectonic shift that fundamentally redraws the map of Hollywood power.
 
@@ -54,105 +50,19 @@ Second, **The New Netflix**. Historically, Netflix has shunned major M&A and the
 
 The streaming wars are over. The **Netflix-Warner Bros.** merger confirms a new reality: scale and IP ownership are the only paths to survival.
 
+-->
+
 ### Week in Review: Nov. 30 to Dec. 6, 2025
 
-- "Code Red" declared at OpenAI ([]()) <!-- Link TK -->
+- **The AI battle among Silicon Valley's heavyweights escalated markedly.** In a memo to OpenAI staff, CEO Sam Altman [declared "code red"](https://www.wsj.com/tech/ai/openais-altman-declares-code-red-to-improve-chatgpt-as-google-threatens-ai-lead-7faf5ea6?st=L6CTNp&reflink=desktopwebshare_permalink) about the urgent need to respond to increased competition from Google and Anthropic. In particular, Altman is concerned about users' rapid adoption of Google's Gemini 3 model, which [launched in late November](https://mashable.com/article/google-gemini-3)... Meanwhile, Meta is expected to cut its metaverse budget by [up to 30%](https://www.forbes.com/sites/charliefink/2025/12/04/meta-cuts-verse-325-billion-in-flux-ai-as-ai-axe-falls-on-ad-crews/) next year to shift spending toward AI.
 
-- Strategy creates dollar reserve, hints it may sell some bitcoin. ([]())
+- Strategy creates dollar reserve, hints it may sell some bitcoin. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE81ZjJOQ0l2ZENwaS14dEFBc0h2REhzb0FhSmpzZEV3bzZ2LW4tVVpRejlWRjE2YXdBQ2xfbGRWNTVHSURQX0lzVGhiYmRsZXZ1WGRJenZzQks0cE1KWWplN21iczQwanVhTThZdTZ3cHI?hl=en-US&gl=US&ceid=US%3Aen))
 
-- According to a recent report by JPMorgan, the cryptocurrency market may be poised for significant growth, with analysts predicting that Bitcoin could reach as high as $170,000 within the next 6-12 months due to its volatility-adjusted comparison to gold. This projection is based on the assumption that the market has corrected and that the ratio of open interest in Bitcoin perpetual futures to market capitalization has fallen to its historical norm.  ([The Block](https://www.theblock.co/post/377891/jpmorgan-bitcoin-price-170000-next-6-12-months)) <!-- Draft news summary by Leo/Llama 3.1 8B-->
+- **AI and consumer-electronics companies** are increasingly battling for access to memory chips amid a global supply shortage. Yikes. ([Reuters](https://www.reuters.com/world/china/ai-frenzy-is-driving-new-global-supply-chain-crisis-2025-12-03/?utm_source=w3w))
 
-- Crypto prices took a hit this week, with Bitcoin falling below $90,000 and Ethereum flirting with a drop below $3,000. The downturn, which saw over $493 million in liquidations, comes as major stock indices stay green and traders await a potential third interest rate cut. ([Decrypt](https://decrypt.co/351123/bitcoin-ethereum-xrp-dive-liquidations-hit-500-million-stocks-rise)) <!-- Draft news summary by Leo/Llama 3.1 8B-->
+- **News publishers' love-hate relationship with AI continues.** The Press Gazette's Charlotte Tobitt published an [updated summary](https://pressgazette.co.uk/platforms/news-publisher-ai-deals-lawsuits-openai-google/) of which organizations are suing AI startups over past usage of their work as training data. But some are also signing licensing deals with the likes of Meta or OpenAI.
 
-- The Department of Justice is pushing for a maximum 12-year prison sentence for Terra founder Do Kwon, citing "unwarranted sentencing disparities" with other high-profile crypto cases, including the 25-year sentence given to FTX founder Sam Bankman-Fried. Kwon's lawyers had initially requested a five-year sentence, but prosecutors argue that his crimes, which resulted in $40 billion in investor losses, warrant a stiffer penalty. ([Decrypt](https://decrypt.co/351106/trump-doj-wants-terra-founder-do-kwon-behind-bars-12-years-sbf)) <!-- Draft news summary by Leo/Llama 3.1 8B-->
-
-- Strive, a leading public bitcoin treasury company, has urged MSCI to reconsider a proposal that would bar bitcoin-heavy firms from major equity benchmarks, arguing that a hard exclusion rule would be misguided and create inconsistent outcomes across jurisdictions. The proposal, which is set to be announced on January 15, 2026, could have significant implications for companies like Strategy, the largest public bitcoin holder, and may lead to passive outflows of up to $8.8 billion if other index providers follow. ([The Block](https://www.theblock.co/post/381538/strive-urges-msci-market-decide-bitcoin-treasury-companies)) <!-- Draft news summary by Leo/Llama 3.1 8B-->
-
-- Bitcoin and other major cryptocurrencies are experiencing a sharp decline, with Bitcoin falling below $90,000 and Ethereum flirting with a drop below $3,000, despite major stock indices showing gains. The crypto market's volatility continues, with over $493 million in liquidations recorded in the past day, largely driven by long positions betting on price increases. ([Decrypt](https://decrypt.co/351123/bitcoin-ethereum-xrp-dive-liquidations-hit-500-million-stocks-rise)) <!-- Draft news summary by Leo/Llama 3.1 8B-->
-
-- A lawmaker in Indiana has introduced legislation that would allow public servants to invest in cryptocurrency exposure through retirement and savings programs, while also preventing local governments from establishing rules that limit cryptocurrencies' use. The bill, which aims to make Indiana a leader in digital asset adoption, would provide Hoosiers with more investment choices while establishing guardrails for responsible use. ([Decrypt](https://decrypt.co/351112/indiana-lawmaker-pushes-bitcoin-pensions-crypto-payment-protections)) <!-- Draft news summary by Leo/Llama 3.1 8B-->
-
-<!-- Stories from ChatGPT query... -->
-
-Here are six recent, high-impact stories (3 on AI, 3 on blockchain / crypto / Web3-finance) worth including in your next newsletter.
-
----
-
-## 🤖 Top AI-Related Stories
-
-* **Google rolls out Gemini 3 and major AI infrastructure push** — *Google*’s December roundup details the new release of Gemini 3 (bringing “improved learning and problem-solving” capabilities), its integration across Google Search and the Gemini app, and the debut of “Nano Banana Pro” for high-fidelity image generation. The article also highlights a multibillion-dollar investment in AI infrastructure. ([blog.google][1])
-* **Memory-chip shortage bites as AI demand soars** — According to *Reuters*, the global rush to support AI and consumer-electronics workloads has triggered an acute memory-chip shortage, driving up prices and creating supply-chain strain, which could ripple across hardware and AI product development in the near term. ([Reuters][2])
-* **U.S. Department of Health and Human Services unveils plan to embed AI across public-health operations** — On December 4, HHS announced a 20-page strategy to expand AI adoption across its divisions, promising new tools, boosted R&D, and a “try-first” culture — though critics warn the plan raises serious data-privacy and governance concerns. ([AP News][3])
-
----
-
-## 🔗 Top Blockchain / Crypto / Web3-Finance Stories
-
-* **Lloyds Banking Group proposes tokenised bank deposits + AI to transform UK home-buying** — In a provocative piece in the *Financial Times*, Lloyds’ CEO outlines a vision for combining blockchain-based tokenised deposits with AI-driven processes to simplify home purchases, reduce intermediaries, and modernize financial services. The bank aims to pilot such a system by 2027. ([Financial Times][4])
-* **Bitcoin slides sharply as investor sentiment sours** — *Reuters* reported that Bitcoin fell roughly 6% on December 1, marking its biggest daily percentage drop since early November, and capping off a month of steep losses (roughest since mid-2021) as investors fled risk assets. ([Reuters][5])
-* **Some analysts argue the 2025 Bitcoin “bull run” is over — but 2026 may hold surprises** — As per a recent piece covered by Yahoo Finance, some market watchers believe the current bull run in Bitcoin has ended, yet forecast a potential rebound in 2026, citing possible institutional adoption and shifts in macroeconomic conditions. ([Yahoo Finance][6])
-
----
-
-If you like, I can also pull up 2–3 “wild-card” stories (emerging trends, regulatory signals, or less obvious but important developments) to include — those often prove good conversation-starters for newsletter readers.
-
-* [blog.google](https://blog.google/technology/ai/google-ai-updates-november-2025/?utm_source=chatgpt.com)
-* [Reuters](https://www.reuters.com/world/china/bytedance-rolls-out-ai-voice-assistant-chinese-smartphones-2025-12-01/?utm_source=chatgpt.com)
-* [itpro.com](https://www.itpro.com/technology/artificial-intelligence/hpe-and-nvidia-launch-first-eu-ai-factory-lab-in-france?utm_source=chatgpt.com)
-* [AP News](https://apnews.com/article/4b4e2dd2e26105310c58c75c6df17b08?utm_source=chatgpt.com)
-* [Financial Times](https://www.ft.com/content/4a00faef-5af5-4c99-9878-53b1783c193a?utm_source=chatgpt.com)
-* [webpronews.com](https://www.webpronews.com/chatgpt-growth-slows-to-5-amid-geminis-30-surge-in-ai-market/?utm_source=chatgpt.com)
-
-[1]: https://blog.google/technology/ai/google-ai-updates-november-2025/?utm_source=chatgpt.com "The latest AI news we announced in November"
-[2]: https://www.reuters.com/world/china/ai-frenzy-is-driving-new-global-supply-chain-crisis-2025-12-03/?utm_source=chatgpt.com "The AI frenzy is driving a memory chip supply crisis"
-[3]: https://apnews.com/article/4b4e2dd2e26105310c58c75c6df17b08?utm_source=chatgpt.com "US health department unveils strategy to expand its adoption of AI technology"
-[4]: https://www.ft.com/content/4a00faef-5af5-4c99-9878-53b1783c193a?utm_source=chatgpt.com "Lloyds Bank pushes for AI and blockchain to transform UK homebuying"
-[5]: https://www.reuters.com/business/finance/bitcoin-falls-5-below-90000-investors-ditch-risk-assets-2025-12-01/?utm_source=chatgpt.com "Bitcoin falls again after weak November as bearish ..."
-[6]: https://finance.yahoo.com/news/bitcoins-2025-bull-run-over-193108824.html?utm_source=chatgpt.com "Bitcoin's 2025 Bull Run Is Over, Expert Asserts—But 2026 ..."
-
-<!-- Stories from Gemini query... -->
-
-This is an excellent crop of recent stories for your next newsletter. As a veteran tech journalist, I've tracked the biggest moves from December 1st to the present, focusing on corporate strategy, major regulatory shifts, and the ongoing legal battles that define emerging tech.
-
-Here are the top three stories for AI and the top three for blockchain/crypto, pulled from your list of high-quality sources and others with similar editorial standards.
-
------
-
-### Top Three AI News Stories (November 30 – Present)
-
-  * **The New York Times Escalates Copyright War with Second AI Lawsuit**
-    The New York Times filed a lawsuit against AI search startup Perplexity AI, alleging that the company illegally copied, distributed, and displayed millions of its articles without permission to train its models and power its AI-generated answers. This lawsuit is the latest escalation in the ongoing legal battle between content creators and large language model (LLM) developers, with major financial implications for both the media and tech industries.
-
-      * [Who's suing AI and who's signing: NYT and Chicago Tribune sue Perplexity, Meta signs licensing deals](https://pressgazette.co.uk/platforms/news-publisher-ai-deals-lawsuits-openai-google/)
-
-  * **Meta Shifts Strategy, Cuts Metaverse Budget to Prioritize AI**
-    Meta Platforms is reportedly making significant cuts to its metaverse-related spending, intending to free up billions of dollars to redirect toward its artificial intelligence initiatives. This strategic pivot signals a major capital allocation shift within Big Tech, prioritizing the immediate and massive growth potential of generative AI over the longer-term, more speculative development of immersive virtual worlds.
-
-      * [Meta cuts to metaverse 'black hole' could free up billions for AI and lift shares by 20%: analysts](https://www.google.com/search?q=https://www.theblock.co/post/372793/meta-cuts-to-metaverse-black-hole-could-free-up-billions-for-ai-and-lift-shares-by-20-analysts)
-
-  * **Google Launches Gemini 3 and Announces Major Infrastructure Investment**
-    Google rolled out its next-generation multimodal AI model, Gemini 3, making its state-of-the-art reasoning capabilities available in Google Search and the Gemini app. Concurrently, the company announced a monumental $40 billion investment in new data centers in Texas to significantly expand its capacity for AI and cloud infrastructure, underscoring the fierce arms race for AI dominance.
-
-      * [The latest AI news we announced in November - Google Blog](https://blog.google/technology/ai/google-ai-updates-november-2025/)
-
------
-
-### Top Three Blockchain News Stories (November 30 – Present)
-
-  * **Global Regulators Zero In on Stablecoin Frameworks**
-    A new report reviewing 2025 crypto policy developments across 30 jurisdictions found that stablecoins were the primary focus for policymakers worldwide, with over 70% of reviewed jurisdictions advancing new regulatory frameworks. This global push, driven by initiatives like the U.S. GENIUS Act and the continued rollout of the EU's MiCA, indicates that bespoke regulation for stablecoins is entering a period of maturity and implementation.
-
-      * [Global Crypto Policy Review Outlook 2025/26 Report - TRM Labs](https://www.trmlabs.com/reports-and-whitepapers/global-crypto-policy-review-outlook-2025-26)
-
-  * **Poland Becomes Lone EU Holdout on MiCA Crypto Bill**
-    Poland's parliament failed to overturn a presidential veto on the nation's implementation of the European Union’s landmark Markets in Crypto-Assets (MiCA) regulation. This makes Poland the only EU member state to hold out on the comprehensive crypto framework, creating a potential regulatory fragmentation point within the bloc’s single market for digital assets.
-
-      * [Poland becomes EU's lone MiCA holdout after parliament fails to overturn veto on crypto bill](https://www.google.com/search?q=https://www.theblock.co/post/373070/poland-becomes-eus-lone-mica-holdout-after-parliament-fails-to-overturn-veto-on-crypto-bill)
-
-  * **Crypto Miners Pivot to AI as Computational Demand Soars**
-    Crypto miners are increasingly leveraging their high-power computational equipment and access to low-cost energy to service the burgeoning artificial intelligence sector. This cross-industry trend highlights the economic convergence of the two major emerging technologies, with traditional Bitcoin and crypto mining operations finding new, lucrative revenue streams in providing AI infrastructure.
-
-      * [Crypto Miners Are Pivoting To AI](https://www.google.com/search?q=https://www.forbes.com/sites/billybambrough/2025/11/30/crypto-miners-are-pivoting-to-ai/) (Note: The article is part of a larger Forbes Digital Assets segment)
+- **U.S. prosecutors are pushing** for a maximum 12-year prison sentence for Terra founder Do Kwon, whose crimes resulted in $40 billion in investor losses. Such hard-line enforcement has been rare recently as the Trump administration has generally sought to ease crypto regulation. ([Decrypt](https://decrypt.co/351106/trump-doj-wants-terra-founder-do-kwon-behind-bars-12-years-sbf))
 
 ### Market Snapshot
 
@@ -211,15 +121,17 @@ Here are the top three stories for AI and the top three for blockchain/crypto, p
 
 ### Looking Ahead
 
-- Bloomberg Originals on Quantum Computing ([]()) <!-- Link TK -->
-- tk ([]())
-- tk ([]())
+- **Core Scientific,** a company that previously filed for bankruptcy after building a massive data center to mine bitcoin in Denton, Texas, is now pivoting to provide cloud computing capacity for AI startups. Their move is emblematic of a choice many crypto miners are weighing right now. ([Forbes](https://www.forbes.com/sites/sarahemerson/2024/12/09/a-bitcoin-miner-promised-to-help-a-texas-town-it-went-bankrupt-instead-now-its-pivoting-to-ai/))
+
+- **Stablecoins have been the primary focus** for crypto policy worldwide in 2025, according to a [new analysis by TRM Labs](https://www.trmlabs.com/reports-and-whitepapers/global-crypto-policy-review-outlook-2025-26). The analytics and compliance firm reviewed regulatory developments this year across 30 jurisdictions and found over 70% of them were advancing new rules on stablecoins.
+
+- **An Indiana lawmaker has introduced a bill** to allow public employees to invest in digital currencies through the state's retirement and savings programs. ([Decrypt](https://decrypt.co/351112/indiana-lawmaker-pushes-bitcoin-pensions-crypto-payment-protections))
 
 ### Odds & Ends
 
-- Florida built robo rabbits to kill pythons. https://www.complex.com/life/a/maggie-ekberg/florida-built-4k-furry-robo-rabbits-to-catfish-giant-pythons
+- **Where have all the sneakerheads gone?** A California sneaker store owner’s rant about the collapsing resale market for collectible sneakers recently went viral on social media. Some hobbyists believe the thinning trade is symptomatic of a slowdown underway in the broader U.S. economy. ([The Daily Dot](https://www.dailydot.com/news/sneaker-store-owner-sales-down/))
 
-- The sneaker trade is dying. ([]()) https://www.dailydot.com/news/sneaker-store-owner-sales-down/ | https://wwd.com/footwear-news/shoe-industry-news/sneaker-resale-decline-shifts-oversupply-1237707525/
+- **The South Florida Water Management District** has been deploying dozens of robotic rabbits recently in an effort to control an infestation of Burmese pythons in the Everglades marshland, where they are a non-native species. The solar-powered bunny bots help lure and detect the otherwise well-camouflaged pythons so they can be removed humanely. ([Fast Company](https://www.fastcompany.com/91394732/officials-everglades-using-cute-robot-rabbits-combat-invasive-burmese-pythons))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
