Writing through news summaries
Replaced 'escalated markedly' with 'escalated sharply' and updated the description of Strategy's financial actions regarding bitcoin and cash reserves.

--- a/2025/2025-12-07-wir.md
+++ b/2025/2025-12-07-wir.md
@@ -54,9 +54,9 @@ The streaming wars are over. The **Netflix-Warner Bros.** merger confirms a new 
 
 ### Week in Review: Nov. 30 to Dec. 6, 2025
 
-- **The AI battle among Silicon Valley's heavyweights escalated markedly.** In a memo to OpenAI staff, CEO Sam Altman [declared "code red"](https://www.wsj.com/tech/ai/openais-altman-declares-code-red-to-improve-chatgpt-as-google-threatens-ai-lead-7faf5ea6?st=L6CTNp&reflink=desktopwebshare_permalink) about the urgent need to respond to increased competition from Google and Anthropic. In particular, Altman is concerned about users' rapid adoption of Google's Gemini 3 model, which [launched in late November](https://mashable.com/article/google-gemini-3)... Meanwhile, Meta is expected to cut its metaverse budget by [up to 30%](https://www.forbes.com/sites/charliefink/2025/12/04/meta-cuts-verse-325-billion-in-flux-ai-as-ai-axe-falls-on-ad-crews/) next year to shift spending toward AI.
+- **The AI battle among Silicon Valley's heavyweights escalated sharply.** In a memo to OpenAI staff, CEO Sam Altman [declared "code red"](https://www.wsj.com/tech/ai/openais-altman-declares-code-red-to-improve-chatgpt-as-google-threatens-ai-lead-7faf5ea6?st=L6CTNp&reflink=desktopwebshare_permalink) about the urgent need to respond to increased competition from Google and Anthropic. In particular, Altman is concerned about users' rapid adoption of Google's Gemini 3 model, which [launched in late November](https://mashable.com/article/google-gemini-3)... Meanwhile, Meta is expected to cut its metaverse budget by [up to 30%](https://www.forbes.com/sites/charliefink/2025/12/04/meta-cuts-verse-325-billion-in-flux-ai-as-ai-axe-falls-on-ad-crews/) next year to shift spending toward AI.
 
-- Strategy creates dollar reserve, hints it may sell some bitcoin. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE81ZjJOQ0l2ZENwaS14dEFBc0h2REhzb0FhSmpzZEV3bzZ2LW4tVVpRejlWRjE2YXdBQ2xfbGRWNTVHSURQX0lzVGhiYmRsZXZ1WGRJenZzQks0cE1KWWplN21iczQwanVhTThZdTZ3cHI?hl=en-US&gl=US&ceid=US%3Aen))
+- **Strategy, a major holder of bitcoin,** said it has created a $1.4 billion cash reserve to fund future dividend payments. The company also slashed its full-year profit projections, underscoring the problems that have plagued digital-asset treasury (DAT) companies lately. As crypto markets have swooned, the valuations of DAT companies, which are based on the token holdings on their books, have plunged as well. ([Sherwood News](https://sherwood.news/markets/strategy-announces-usd1-44-billion-us-dollar-reserve-to-avoid-participating/))
 
 - **AI and consumer-electronics companies** are increasingly battling for access to memory chips amid a global supply shortage. Yikes. ([Reuters](https://www.reuters.com/world/china/ai-frenzy-is-driving-new-global-supply-chain-crisis-2025-12-03/?utm_source=w3w))
 
