--- a/2025/2025-12-07-wir.md
+++ b/2025/2025-12-07-wir.md
@@ -3,10 +3,15 @@
 
 ![Batman on the movie, carrying a roller bag down the street](https://w3w.news/img/batman-emmanuel-denier-3000.jpg)  
 *Photo by Emmanuel Denier via [Unsplash](https://unsplash.com/@sounce_cosplay)*
+# The streamer swallows Hollywood
+## Why Netflix’s $83 billion acquisition of Warner Brothers changes everything
+
+![Batman on the movie, carrying a roller bag down the street](https://w3w.news/img/batman-emmanuel-denier-3000.jpg)  
+*Photo by Emmanuel Denier via [Unsplash](https://unsplash.com/@sounce_cosplay)*
 
 **For consumers, the best media merger is generally none at all.** Such deals always seem to lead to higher subscription fees, less diversity of ideas, and myriad other unpleasantness.
 
-That said, [Netflix's acquisition of Warner Brothers](https://finance.yahoo.com/news/lowest-probability-outcome-netflixs-72-billion-deal-for-warner-bros-discovery-stuns-wall-street-153038741.html) for $83 billion is probably about as good as it gets for the rest of us, grading on a very steep curve. The reason why is perhaps best expressed using a metaphor borrowed from a different media giant.
+That said, [Netflix's acquisition of Warner Brothers'](https://finance.yahoo.com/news/lowest-probability-outcome-netflixs-72-billion-deal-for-warner-bros-discovery-stuns-wall-street-153038741.html) movie studio and streaming businesses for $83 billion is probably about as good as it gets for the rest of us, grading on a very steep curve. The reason why is perhaps best expressed using a metaphor borrowed from a different media giant.
 
 Realistically, at some point long ago in the bidding process that led to [Friday's deal announcement](https://about.netflix.com/en/news/netflix-to-acquire-warner-bros), "no merger" ceased to be a viable option. Once Warner Brothers was in play as a possible acquisition target, with an army of bankers and lawyers richly incentivized to close a sale, the company was (and is) never really going to remain independent again.
 
@@ -14,43 +19,17 @@ To claim otherwise at this point is akin to believing Bambi lives in the forest.
 
 Some details to watch from here:
 
-- TK <!-- Item on Paramount/WH relationships -->
+- **The deal still needs regulatory approval.** That's no small caveat as there are [significant antitrust issues involved](https://www.youtube.com/watch?v=aYaQA9pY3lI&t=618s), some of which may be raised in litigation by rival bidders Paramount Skydance and Comcast. 
 
-- TK <!-- Item on CNN -->
+- **CNN and Warner Brothers' other cable businesses** will be spun off into a separate company if the Netflix deal goes through. That ensures the news network's independence -- for now. [Which is great](https://www.forbes.com/sites/andymeek/2025/12/06/cnn-got-snubbed-in-the-netflix-wbd-deal-why-thats-ultimately-a-good-thing/). But to be honest, I would still worry about its longer-term prospects, as CNN will now effectively be jettisoned in a pure-play cable company facing structural decline. Much better to be part of a conglomerate with some growing digital businesses to help subsidize all those foreign bureaus, producers, and make-up artists who work behind the cameras. 
 
-- TK <!-- How is that spinoff going to fare? -->
+- **Paramount Skydance in particular was** (and perhaps still is?) trying to buy all of the existing parent company Warner Brothers Discovery, *including CNN and its other cable assets.* The Ellison family, which controls Paramount Skydance, has very vocally supported the Trump administration politically. Until recently, that made many Wall Streeters believe Paramount Skydance stood the [best chance to win](https://nypost.com/2025/11/22/business/paramount-skydance-is-currently-winning-the-war-to-acquire-warner-bros-discovery/) the bidding for Warner Brothers, as they could perhaps gain regulatory approval more easily than other suitors. But it also raised concerns among journalists that the Ellisons might look to [meddle with CNN's editorial work](https://www.theguardian.com/us-news/2025/nov/20/warner-bros-discovery-takeover-paramount-skydance-larry-ellison) to make the network tilt rightward if they were to acquire it.
 
-- /Film on how the deal could affect the DCU: https://www.slashfilm.com/2044070/netflix-warner-bros-acquisition-dc-universe-future/
+- **Over at the entertainment site /Film,** Ben Pearson looked into how the Netflix deal might affect Warner Brothers' DC Comics content in particular. [Pearson says](https://www.slashfilm.com/2044070/netflix-warner-bros-acquisition-dc-universe-future/) some upcoming DC movies may not get theatrical releases at all. But he thinks DC's venerable magazine business could remain surprisingly unscathed, as its continuance would help protect movie rights to characters like Batman and Superman in the future.
 
-<!-- Draft post by ChatGPT...
+Which brings us to that other perennial question that must be answered regarding any proposed media merger: 
 
-It finally happened: Netflix, the onetime industry disruptor, is now buying one of Hollywood’s storied incumbents. The newly announced acquisition of Warner Bros. isn’t just another mega-merger — it’s a line of demarcation in the evolution of entertainment, technology, and distribution. And it says as much about where streaming *isn’t* working as where it’s headed next.
-
-For Netflix, the motivation is obvious: growth. After a decade of relentless expansion, Netflix has hit a saturation wall in mature markets. Buying Warner Bros. gives the company something it has historically lacked — a deep, defensible library of intellectual property, marquee franchises, and a century of film and TV assets that can be remixed, rebooted, or folded into Netflix’s increasingly ambitious games and live-entertainment bets. Think: Hogwarts in VR, Westeros as an MMO, Dune as a prestige limited series. The synergies marketers love to fantasize about suddenly become very real.
-
-For Warner Bros., the deal is equal parts rescue and reinvention. Saddled with debt, hit-and-miss film slates, and a streaming service (Max) that never quite found its cultural lane, the studio gets a lifeline. But it also surrenders control over brands that have shaped global popular culture. The question now: Will Netflix respect the legacy it’s buying — or algorithmically optimize it into something unrecognizable?
-
-Regulators are unlikely to let this slide without a prolonged fight. The deal consolidates even more power in Big Tech’s hands and accelerates the collapse of traditional Hollywood as a competitive ecosystem. Expect hearings, forced concessions, and a fresh round of debates about how much of our media diet should depend on a handful of tech platforms.
-
-But one thing is clear: This merger signals the end of the “streaming wars” as we’ve known them. The next era won’t be about who has the best app — it will be about who controls the IP universe that shapes global culture. And with this deal, Netflix just grabbed a very large share of that future.
-
-<!-- Draft post by Google Gemini...
-
-The **$82.7 billion Netflix-Warner Bros. Discovery (WBD) deal** marks the end of the streaming wars’ “golden age” and the beginning of the consolidation era.
-
-The streaming universe just got a whole lot smaller. On Friday, **Netflix** formally announced its acquisition of **Warner Bros. Discovery's (WBD) studio and streaming business** for a staggering $82.7 billion, confirming the media merger of the decade. This isn't just a corporate transaction; it’s a tectonic shift that fundamentally redraws the map of Hollywood power.
-
-For Netflix, the deal instantly delivers the one thing its original model always lacked: **heritage intellectual property (IP)**. The acquisition brings one of the deepest content libraries in history—including **HBO**, the iconic **Warner Bros. film and TV studios**, and flagship franchises like *Harry Potter*, DC Comics, *Game of Thrones*, and classics like *Casablanca*—straight into Netflix’s ecosystem. This move eliminates a primary competitor (HBO Max) and creates a content colossus with unmatched global leverage.
-
-The immediate shockwaves are being felt on two fronts.
-
-First, **Antitrust Scrutiny**. This is an unprecedented level of streaming consolidation, which has already drawn swift, bipartisan pushback from Congress. Critics, including lawmakers and labor unions, warn the deal will lead to higher consumer prices, fewer creative choices, and job losses. Netflix has signaled its confidence by offering a multi-billion-dollar breakup fee should regulators block the transaction, expecting a drawn-out, 12-18 month review process.
-
-Second, **The New Netflix**. Historically, Netflix has shunned major M&A and theatrical releases. This $83 billion bet signals a complete strategic pivot. It transforms the tech giant into a vertically integrated Hollywood powerhouse that produces, owns, and distributes content on a global scale. Notably, the acquisition *excludes* WBD’s linear TV networks like CNN and TNT, which will be spun off into a separate entity, focusing the newly combined company entirely on premium, global content ownership.
-
-The streaming wars are over. The **Netflix-Warner Bros.** merger confirms a new reality: scale and IP ownership are the only paths to survival.
-
--->
+Is it good for the Justice League?
 
 ### Week in Review: Nov. 30 to Dec. 6, 2025
 
