--- a/2025/2025-12-07-wir.md
+++ b/2025/2025-12-07-wir.md
@@ -6,25 +6,23 @@
 
 **For consumers, the best media merger is generally none at all.** Such deals always seem to lead to higher subscription fees, less diversity of ideas, and myriad other unpleasantness.
 
-That said, [Netflix's acquisition of Warner Brothers'](https://finance.yahoo.com/news/lowest-probability-outcome-netflixs-72-billion-deal-for-warner-bros-discovery-stuns-wall-street-153038741.html) movie studio and streaming businesses for $83 billion is probably about as good as it gets for the rest of us, grading on a very steep curve. The reason why is perhaps best expressed using a metaphor borrowed from a different media giant.
+That said, [Netflix's acquisition of Warner Brothers'](https://finance.yahoo.com/news/lowest-probability-outcome-netflixs-72-billion-deal-for-warner-bros-discovery-stuns-wall-street-153038741.html) movie studio and streaming business for $83 billion is probably about as good as it gets for the rest of us, grading on a very steep curve. The reason why is perhaps best expressed using a metaphor borrowed from a different media giant.
 
-Realistically, at some point long ago in the bidding process that led to [Friday's deal announcement](https://about.netflix.com/en/news/netflix-to-acquire-warner-bros), "no merger" ceased to be a viable option. Once Warner Brothers was in play as a possible acquisition target, with an army of bankers and lawyers richly incentivized to close a sale, the company was (and is) never really going to remain independent again.
+Realistically, at some point in the bidding process that led to [Friday's deal announcement](https://about.netflix.com/en/news/netflix-to-acquire-warner-bros), "no merger" ceased to be a viable option long ago. Once Warner Brothers was in play as a possible acquisition target, with an army of bankers and lawyers richly incentivized to close a sale, the company was (and is) never really going to remain independent again.
 
 To claim otherwise at this point is akin to believing Bambi lives in the forest.
 
 Some details to watch from here:
 
-- **The deal still needs regulatory approval.** That's no small caveat as there are [significant antitrust issues involved](https://www.youtube.com/watch?v=aYaQA9pY3lI&t=618s), some of which may be raised in litigation by rival bidders Paramount Skydance and Comcast. 
+- **The deal still needs regulatory approval.** That's no small caveat as there are [significant antitrust issues involved](https://www.youtube.com/watch?v=aYaQA9pY3lI&t=618s), some of which may be raised in litigation by rival bidders Paramount Skydance and Comcast.
 
-- **CNN and Warner Brothers' other cable businesses** will be spun off into a separate company if the Netflix deal goes through. That ensures the news network's independence -- for now. [Which is great](https://www.forbes.com/sites/andymeek/2025/12/06/cnn-got-snubbed-in-the-netflix-wbd-deal-why-thats-ultimately-a-good-thing/). But to be honest, I would still worry about its longer-term prospects, as CNN will now effectively be jettisoned in a pure-play cable company facing structural decline. Much better to be part of a conglomerate with some growing digital businesses to help subsidize all those foreign bureaus, producers, and make-up artists who work behind the cameras. 
+- **CNN and Warner Brothers' other cable businesses** will be spun off into a separate company if the Netflix deal goes through. That ensures the news network's independence -- for now. [Which is great](https://www.forbes.com/sites/andymeek/2025/12/06/cnn-got-snubbed-in-the-netflix-wbd-deal-why-thats-ultimately-a-good-thing/). But to be honest, I would still worry about its longer-term prospects, as CNN will now effectively be jettisoned in a pure-play cable company facing structural decline. Much better to be part of a conglomerate with some growing digital businesses to help subsidize all those foreign bureaus, producers, and make-up artists who work behind the cameras.
 
-- **Paramount Skydance in particular was** (and perhaps still is?) trying to buy all of the existing parent company Warner Brothers Discovery, *including CNN and its other cable assets.* The Ellison family, which controls Paramount Skydance, has very vocally supported the Trump administration politically. Until recently, that made many Wall Streeters believe Paramount Skydance stood the [best chance to win](https://nypost.com/2025/11/22/business/paramount-skydance-is-currently-winning-the-war-to-acquire-warner-bros-discovery/) the bidding for Warner Brothers, as they could perhaps gain regulatory approval more easily than other suitors. But it also raised concerns among journalists that the Ellisons might look to [meddle with CNN's editorial work](https://www.theguardian.com/us-news/2025/nov/20/warner-bros-discovery-takeover-paramount-skydance-larry-ellison) to make the network tilt rightward if they were to acquire it.
+- **Paramount Skydance's bid was structured differently.** They were (and perhaps still are?) trying to buy all of the existing parent company Warner Brothers Discovery, *including CNN and its other cable assets.* The Ellison family, which controls Paramount Skydance, has very vocally supported the Trump administration politically. Until recently, that made many Wall Streeters believe Paramount Skydance stood the [best chance to win](https://nypost.com/2025/11/22/business/paramount-skydance-is-currently-winning-the-war-to-acquire-warner-bros-discovery/) the bidding for Warner Brothers, as they could perhaps gain regulatory approval more easily than other suitors. But it also raised concerns among journalists that the Ellisons might [meddle with CNN's editorial work](https://www.theguardian.com/us-news/2025/nov/20/warner-bros-discovery-takeover-paramount-skydance-larry-ellison) to tilt the network rightward if they were to acquire it.
 
-- **Over at the entertainment site /Film,** Ben Pearson looked into how the Netflix deal might affect Warner Brothers' DC Comics content in particular. [Pearson says](https://www.slashfilm.com/2044070/netflix-warner-bros-acquisition-dc-universe-future/) some upcoming DC movies may not get theatrical releases at all. But he thinks DC's venerable magazine business could remain surprisingly unscathed, as its continuance would help protect movie rights to characters like Batman and Superman in the future.
+- **Over at the entertainment site /Film,** Ben Pearson looked into how the Netflix deal might affect Warner Brothers' DC Comics content in particular. [Pearson says](https://www.slashfilm.com/2044070/netflix-warner-bros-acquisition-dc-universe-future/) some future DC movies might not get theatrical releases at all under a Netflix regime. But he thinks DC's venerable magazine business could remain surprisingly unscathed, as its continuance would help protect movie rights to characters like Batman and Superman.
 
-Which brings us to that other perennial question that must be answered regarding any proposed media merger: 
-
-Is it good for the Justice League?
+Which brings us to that other perennial question that must be answered regarding any proposed media merger: Is it good for the Justice League? 🙃🦸🦇
 
 ### Week in Review: Nov. 30 to Dec. 6, 2025
 
@@ -113,4 +111,4 @@ _**Please note, I regularly use several AI apps to assist production of w3w. But
 
 _**If you need to reach me directly, please email peter[at]pmckay[dot]com.**_
 
-_**Best wishes for a healthy and productive week ahead.**_ 😊
+_**Best wishes for a healthy and productive week ahead.**_ 
