--- a/2025/2025-12-07-wir.md
+++ b/2025/2025-12-07-wir.md
@@ -1,10 +1,10 @@
 # Netflix's Big Power Play
 ## Inside the blockbuster deal with Warner Brothers that reshapes competition, content ownership, and the future of streaming.
 
-![Batman on the movie, carrying a roller bag down the street](https://w3w.news/img/batman-emmanuel-denier-3000.jpg)  
+![Batman on the move, carrying a roller bag down the street](https://w3w.news/img/batman-emmanuel-denier-3000.jpg)  
 *Photo by Emmanuel Denier via [Unsplash](https://unsplash.com/@sounce_cosplay)*
 
-**For consumers, the best media merger is generally none at all.** Such deals always seem to lead to higher subscription fees, less diversity of ideas, and myriad other unpleasantness.
+**For consumers, the best media merger is usually none at all.** Such deals always seem to lead to higher subscription fees, less diversity of ideas, and myriad other unpleasantness.
 
 That said, [Netflix's acquisition of Warner Brothers'](https://finance.yahoo.com/news/lowest-probability-outcome-netflixs-72-billion-deal-for-warner-bros-discovery-stuns-wall-street-153038741.html) movie studio and streaming business for $83 billion is probably about as good as it gets for the rest of us, grading on a very steep curve. The reason why is perhaps best expressed using a metaphor borrowed from a different media giant.
 
