adding some story candidates

--- a/2025/2025-12-14-wir.md
+++ b/2025/2025-12-14-wir.md
@@ -8,10 +8,15 @@
 
 ### Week in Review: Dec. 7-13, 2025
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- Fed rate announcement Wednesday <!-- Link TK. A good hook for a market-related summary item. Wrap in bloodletting at DATCs, etc. --> | Bitcoin near break-even to ETF launch: https://decrypt.co/351573/bitcoin-etf-break-even-level-inflows-slow-support-building
+
+- ChatGPT helped spot a crypto "pig butchering" scam. https://decrypt.co/351568/chatgpt-helps-expose-1-million-crypto-pig-butchering-scam
+
+- The Bitwise 10 became the first exchange-traded fund based on a crypto index in the U.S. https://www.theblock.co/post/381910/bitwises-first-ever-crypto-investment-product-gets-uplisted-to-the-nyse-arca
+
+- PNC/Coinbase partnership: https://decrypt.co/351625/pnc-bank-enables-bitcoin-trading-customers-coinbase
+
+- In Britain, calls for investigation into crypto donations to UKIP: https://decrypt.co/351613/uk-political-parties-call-for-investigation-into-reform-uk-crypto-donations
 
 ### Market Snapshot
 
@@ -74,7 +79,7 @@
 
 - Bloomberg Originals on Quantum Computing ([]()) <!-- Link TK -->
 
-- Werdmuller on RSS ([]()) <!-- Link TK. This could also make a good lead item to riff on. -->
+- Werdmuller on RSS https://werd.io/why-rss-matters/ <!-- This could also make a good lead item to riff on. -->
 
 ### Odds & Ends
 
